# policy_based_design

./: .bazelrc  .gitignore  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.backup  build.sh
.github/workflows/: ci.yml
lib/: BUILD
lib/include/: CalculationPolicies.hpp  Calculator.hpp
lib/test/: BUILD  calculator_test.cpp
python/: BUILD  __init__.py  bindings.cpp  example.py
src/: BUILD  main.cpp
