module(
    name = "policy_based_design",
    version = "0.1.0",
)

bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "rules_python", version = "0.31.0")
bazel_dep(name = "pybind11_bazel", version = "2.12.0")
bazel_dep(name = "googletest", version = "1.14.0", repo_name = "gtest")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.11")
